[project]
name = "usb-security-openenv"
version = "0.1.0"
description = "USB Security RL Environment"
authors = [{ name = "Niharika Enamala" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
